vlib/v/checker/tests/method_call_with_empty_struct_init.vv
struct Abc {
	x int
}

fn (s Abc) abc(x int, param Abc) {
}

fn main() {
	s := Abc{}
	s.abc(0, {})
}
